Fixed overflow

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     font-family: 'Lexend Deca', sans-serif;
-    overflow: auto;
     margin: 0;
 }
 
@@ -12,7 +11,7 @@ html, body{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100%;
+    height: 100%;
     margin: 1rem;
 }
 
